refactor: consolidate media URL routing